More detailed plans for help

--- a/tip/193.md
+++ b/tip/193.md
@@ -39,9 +39,9 @@ Note that I do not want to provide extended help such as might be obtained
 from manual pages; this help system is designed to be mechanically queryable
 first.
 
-# Proposed Change
+# Proposed Change: Tcl Script Level
 
-There are two main components:
+There are three main components:
 
 ## Data Model
 
@@ -72,50 +72,169 @@ of:
 
 [ToDo: say how these are expressed in C code]
 
-[ToDo: talk about how aliases and ensembles can do help construction]
-
-[ToDo: talk about how such information can be partially derived in procedures]
-
 ## Information Access
 
 There will be a new subcommand of **info** to provide access to this
 information at the Tcl level: **help**.  The first argument to **info help**
-will be the name of a command; if no further arguments are supplied, the
-result will be a multi-line string with one invokation per line; the
-invokations will be just the string parts with the literal/varying information
-omitted and the optional/required information converted into surrounding
-question marks.
+will be the name of a command, or, if no such command exists and the argument
+is a two- or three-element list, a lambda term; if no further arguments are
+supplied, the result will be a multi-line string with one invokation per line;
+the invokations will be just the string parts with the literal/varying
+information omitted and the optional/required information converted into
+surrounding question marks.
 
 Otherwise, the second argument to **info help** will be one of:
 
 **summary**: No further arguments. Returns a brief description of what the
     command does, such as the summary text from the manual page (e.g.,
-    "Increment the value of a variable" for **incr**).
+    "`Increment the value of a variable.`" for **incr**).
 
-**get**: Two optional arguments; an index into the list of help "lines"
-    \(first\) and an index within the line \(second\).  If one index is
+> **info help** _cmd_ **summary**
+
+**get**: Two optional arguments; an index into the list of command definition
+    lines \(first\) and an index within the line \(second\).  If one index is
     supplied, returns the list of values \(without lit/var or opt/req info\)
     for the indexed line.  If two indexes are supplied, returns the string
     form for the indexed word within the indexed line.  If no indexes are
     supplied, or returns a list of every such value list when no index is
-    supplied.
+    supplied. (See **Help Definitions** below for the description of which
+    lines this is referring to.)
 
-    **info help** _cmd_ **get** ?_lineIndex_? ?_wordIndex_?
+> **info help** _cmd_ **get** ?_lineIndex_? ?_wordIndex_?
 
 **literal**: Two required arguments; an index into the list of help "lines"
     and an index into the list of values for that line.  Returns a boolean
     that is true when the indexed word within the indexed line is a literal.
 
-    **info help** _cmd_ **literal** _lineIndex wordIndex_
+> **info help** _cmd_ **literal** _lineIndex wordIndex_
 
 **required**: Two required arguments; an index into the list of help "lines"
     and an index into the list of values for that line.  Returns a boolean
     that is true when the indexed word within the indexed line is required.
 
-    **info required** _cmd_ **literal** _lineIndex wordIndex_
+> **info help** _cmd_ **required** _lineIndex wordIndex_
 
-[ToDo: could **info help** be used as a mechanism for procedures to set their
-own help up?]
+**all**: No further arguments. Returns the whole of the string registered as
+   the help definition for the command.
+
+>   **info help** _cmd_ **all**
+
+There shall be an equivalent for TclOO methods. In that case, because methods
+are not commands, instead of **info help**, the subcommand to use will
+be **info class help** _class method_ for methods defined by classes, 
+and **info object help** _object method_ for methods defined by objects.
+Subsequent arguments shall be as for **info help** above. _Overall_ help on a
+class or object will be via the basic **info help** as those _are_ commands.
+
+## Information Definition
+
+There will be a new **doc** command. It will take one or two arguments.
+
+If it takes a single argument, and is run inside a procedure, lambda term, or
+method, then that argument is a _help definition_ to apply to that procedure,
+lambda term or method. When a procedure or method is defined, the creation
+process shall minimally parse the provided script and determine if the first
+command in it is a single-argument **doc** call; if it is, the help definition
+in that argument will be applied during the creation of the procedure/method.
+For lambda terms, this parsing will occur when the lambda term is first
+interpreted as such by Tcl. (Note that this is the _only_ way of documenting a
+lambda.)
+
+The single-argument form otherwise has _no_ effect.
+
+In the two argument form, the first argument shall be the name of a Tcl
+command and the second argument shall be the help definition.
+
+There will also be a **doc** definition in the definition set supported by
+**oo::define** and **oo::objdefine**, that takes two arguments. The first
+argument will be the name of a method (any method, not just one created by
+the **method** definition). This is necessary as it will be the only way to
+create help definitions for forwarded methods.
+
+## Help Definitions
+
+Help definitions will consist of a string that is potentially multi-line. The
+string will be split into paragraphs by visually blank lines (i.e., lines that
+are empty after being passed through **string trimright**) and the common
+whitespace prefix from all paragraphs shall be stripped.
+
+The first paragraph shall be the summary text.
+
+The lines of the second paragraph shall be the data indexed by the other
+**info help** subcommands (**get**, **literal** and **required**); one line
+per description. The words of each of the lines of the second paragraph shall
+be sequences of non-whitespace characters, rather than Tcl words _per se_. If
+a word (other than the initial one, which should be the conventional command
+name) starts with `?` and finishes with `?` then it shall be internally
+interpreted as optional after the question marks are stripped. If a
+non-initial word starts and ends with `=`, it shall be interpreted as literal
+after the equals signs are stripped.  If both `?` and `=` are present at each
+end, in either order, the word shall be both optional and literal and both
+will be stripped. Note that command names are _always_ both required and
+literal. If the final word of a line is `...`, it shall be always optional and
+not literal.
+
+Subsequent paragraphs are not interpreted by this specification, but will be
+provided as part of the information returned by **info help**'s **all**.
+
+# Examples
+
+Help for the **incr** command might be done with:
+```
+doc incr {
+   Increment the value of a variable.
+	
+      incr varName ?increment?
+
+   The default amount to increment by is 1.
+}
+```
+Then you'd be able to do:
+```
+puts [info help incr summary]
+# ==> Increment the value of a variable.
+puts [info help incr get]
+# ==> {incr varName increment}
+puts [info help incr get 0]
+# ==> incr varName increment
+puts [info help incr literal 0 0]
+# ==> 1
+puts [info help incr literal 0 1]
+# ==> 0
+puts [info help incr required 0 1]
+# ==> 1
+puts [info help incr required 0 2]
+# ==> 0
+```
+
+Help for the **if** command might be done with:
+```
+doc if {
+   Execute scripts conditionally.
+   
+      if expr ?=then=? body
+      if expr ?=then=? body1 ?=else=? body2
+      if expr1 ?=then=? body1 =elseif= expr2 ?=then=? body2 ...
+
+   Each of the expr arguments is evaluated as an expression in order until one
+   evaluates to a true value. Then the corresponding body is evaluated as a
+   script.  The words 'then' and 'else' are optional; 'elseif' is required if
+   more than one expression.  If an 'else' is present or a final body, and no
+   expression evaluates to true, the last body is evaluated instead.
+}
+```
+
+Defining your own help for a procedure:
+```
+proc foo {a b {c 123}} {
+   doc {
+      Do the foo to the bar.
+
+      foo a b ?c?
+   }
+   # ...
+}
+```
 
 # Copyright
 
