--- a/tip/594.md
+++ b/tip/594.md
@@ -42,8 +42,8 @@ With two arguments, it behaves exactly like before.  With only one argument:
 * if no error occurs, the result is returned as a dict instead of by populating
   an array
 
-Previously, calling `file stat` with only one argument would raise a `{TCL
-WRONGARGS}` error.
+Previously, calling `file stat` with only one argument would raise a 
+{`TCL WRONGARGS`} error.
 
 # Example
 
