--- a/tip/599.md
+++ b/tip/599.md
@@ -15,16 +15,105 @@ Example:
 $ tclsh8.7
 % package require tcl
 8.7a4+c59a73a540b8cfa7672fc48ec5acc2b7c9d146fad89c7400238f34886dca31e7.clang-1200.utf16
-</pre>
-   
+</pre>   
 
 # Specification
 
-TODO
+In Tcl 8.x, package versions consist of integers separated by dots or (as final one) 'a' or 'b'.
+e.g.:
+
+* "1.2.6"
+* "2.0a2"
+
+This TIP proposes the possibility to add optional build metadata, which MAY be denoted by
+appending a plus sign and a series of dot separated identifiers immediately following the
+version. Identifiers MUST comprise only ASCII alphanumerics and hyphens [0-9A-Za-z-].
+Identifiers MUST NOT be empty. Build metadata MUST be ignored when determining version precedence.
+Thus two versions that differ only in the build metadata, have the same precedence. Examples:
+
+* "1.2.6+tag1.tag2.tag3"
+* "2.0a2+tag1.tag2.tag3"
+
+Note that this is exactly the same way as how ["Semanic Versioning"](https://semver.org/#spec-item-10) versions
+can add optional build metadata, that's not a coincicence.
+
+However, in Tcl, we want to use this information to build an unique version string which tells
+us everything possible about how we built Tcl (or Tk or ....). Advantage: anyone submitting
+a bug report, we can ask to type "package require tcl" and it will tell us everything needed.
+
+* The first identifier is always the Fossil commit-id. If the package doesn't come from fossil
+  but from GIT, its "git-<commit-id>". This way we can always locate the exact commit which
+  was used as base from the build.
+* All other identifiers are sorted alphabetical.
+* There are 3 predefined tags for the compiler used:
+   "clang-xxxx"
+   "gcc-xxxx"
+   "msvc-xxxx"
+  where "xxxx" is the version of the compiler (two digits for major and two digits for minor version)
+* Then there is the following list of identifiers. Other packages than Tcl can use a subset of these:
+
+  | Identifier  | Meaning |
+  |:-------:|:----------------:|
+  | `compiledebug` | Configured with "--enable-symbols=all" |
+  | `compilestats`  | Configured with "--enable-symbols=all" |
+  | `cplusplus`  | Compiled with a C++ compiler |
+  | `debug`  | Configured with "--enable-symbols"Configured with "--enable-symbols"|
+  | `ilp32`  | Compiled as 32-bit (integers, longs and pointers are 32-bit) |
+  | `memdebug`  | Configured with "--enable-symbols=mem" |
+  | `nmake`  | Built with "nmake" in stead of "make"|
+  | `no-deprecate`  | Deprecated features are removed |
+  | `no-thread`  | Compiled without support for threads |
+  | `no-optimize`  | Compiler optimization has been switched off |
+  | `objective-c`  | Compiled with an objective-c compiler |
+  | `objective-c++`  | Compiled with an objective-c++ compiler |
+  | `profiled`  | Compiled with profile information |
+  | `static`  | Compiled as static library |
+  | `utf-16`  | Internal string format is 'utf-16', not 'unicode' |
+
+  More of those can be added in the future.
+
+* Anyone patching Tcl can add its own identifiers, so it's clear that
+  Tcl is modified. E.g.:
+
+  | Identifier  | Meaning |
+  |:-------:|:----------------:|
+  | `activestate` | "Activestate" patches are applied |
+  | `apple`   | "apple" patches are applied |
+  | `androwish`| "androwish" patches are applied |
+  | `bsd`     | "BSD" patches are applied |
+  | `cygwin`  | "Fedora" patches are applied |
+  | `debian`  | "Debian" patches are applied |
+  | `fedora`  | "Fedora" patches are applied |
+  | `freebsd` | "FreeBSD" patches are applied |
+  | `microsoft` | "Microsoft" patches are applied |
+  | `magicsplat` | "Magicsplat" patches are applied |
+  | `openbsd` | "OpenBSD" patches are applied |
+  | `redhat`  | "Redhat" patches are applied |
+  | `ubuntu`  | "Ubuntu" patches are applied |
+
+  (just examples, you can invent your own.)
+
+* The functions `Tcl_FindExecutable`, `Tcl_InitSubsystems` and `Tcl_SetPanicProc` are
+  modified to return the version string as described in this TIP. Those functions are
+  meant to be used during Tcl initialisation, which allows to double-check for presense
+  or absence of certain identifiers required by the application (e.g. thread-enabled).
+
+* Functions like "package require" and "package vcompare" fully ignore these identifiers.
+
+* Using "package require Tcl" or "package require Tk" will return the version string
+  _without_ the additional identifiers. For compatibility reasons the full version
+  string is only returned when using "package require tcl"/"package require tk"
+
+* Deprecate the array elements tcl_platform[threaded], tcl_platform[pointerSize],
+  and tcl_platform[wordSize]. You can check for the identifiers `no-thread` resp.
+  `ilp32` now. In Tcl 9.0 those will be gone.
+
+* Deprecate the following "tcl::pkgconfig" keys: `debug`, `threaded`, `profiled`,
+  `64bit`, `optimized`, `mem_debug`, `compile_stats`. In Tcl 9.0 those will be gone.
 
 # Implementation
 
-Implementation is in Tcl branch build-info, still highly experimental.
+Implementation is in Tcl branch "build-info"
 
 # Compatibility
 
