Fix TIP #596/597 state

--- a/tip/596.md
+++ b/tip/596.md
@@ -1,6 +1,6 @@
 # TIP 596: Stubs support for Embedding Tcl in other applications
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Tcl-Version:    9.0
