--- a/tip/597.md
+++ b/tip/597.md
@@ -1,6 +1,6 @@
 # TIP 597: "string is unicode" and better utf-8/utf-16/cesu-8 encodings
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Tcl-Version:    8.7
