--- a/tip/599.md
+++ b/tip/599.md
@@ -35,14 +35,14 @@ Thus two versions that differ only in the build metadata, have the same preceden
 * "2.0a2+tag1.tag2.tag3"
 
 Note that this is exactly the same way as how ["Semanic Versioning"](https://semver.org/#spec-item-10) versions
-can add optional build metadata, that's not a coincicence.
+can add optional build metadata, that's not a coincidence.
 
 However, in Tcl, we want to use this information to build an unique version string which tells
 us everything possible about how we built Tcl (or Tk or ....). Advantage: anyone submitting
 a bug report, we can ask to type "package require tcl" and it will tell us everything needed.
 
 * The first identifier is always the Fossil commit-id. If the package doesn't come from fossil
-  but from GIT, its "git-<commit-id>". This way we can always locate the exact commit which
+  but from GIT, its "git-&lt;commit-id&gt;". This way we can always locate the exact commit which
   was used as base from the build.
 * All other identifiers are sorted alphabetical.
 * There are 3 predefined tags for the compiler used:
