More TIP #599 tweaks

--- a/tip/599.md
+++ b/tip/599.md
@@ -57,7 +57,7 @@ a bug report, we can ask to type "package require tcl" and it will tell us every
   | `compiledebug` | Configured with "--enable-symbols=all" |
   | `compilestats`  | Configured with "--enable-symbols=all" |
   | `cplusplus`  | Compiled with a C++ compiler |
-  | `debug`  | Configured with "--enable-symbols"Configured with "--enable-symbols"|
+  | `debug`  | Configured with "--enable-symbols"|
   | `ilp32`  | Compiled as 32-bit (integers, longs and pointers are 32-bit) |
   | `memdebug`  | Configured with "--enable-symbols=mem" |
   | `nmake`  | Built with "nmake" in stead of "make"|
@@ -81,7 +81,7 @@ a bug report, we can ask to type "package require tcl" and it will tell us every
   | `apple`   | "apple" patches are applied |
   | `androwish`| "androwish" patches are applied |
   | `bsd`     | "BSD" patches are applied |
-  | `cygwin`  | "Fedora" patches are applied |
+  | `cygwin`  | "Cygwin" patches are applied |
   | `debian`  | "Debian" patches are applied |
   | `fedora`  | "Fedora" patches are applied |
   | `freebsd` | "FreeBSD" patches are applied |
@@ -105,8 +105,8 @@ a bug report, we can ask to type "package require tcl" and it will tell us every
   string is only returned when using "package require tcl"/"package require tk"
 
 * Deprecate the array elements tcl_platform[threaded], tcl_platform[pointerSize],
-  and tcl_platform[wordSize]. You can check for the identifiers `no-thread` resp.
-  `ilp32` now. In Tcl 9.0 those will be gone.
+  and tcl_platform[wordSize]. In Tcl 9.0 those will be gone. You can instead check
+  for the identifiers `no-thread` resp. `ilp32` now.
 
 * Deprecate the following "tcl::pkgconfig" keys: `debug`, `threaded`, `profiled`,
   `64bit`, `optimized`, `mem_debug`, `compile_stats`. In Tcl 9.0 those will be gone.
