TIP #599 more tweaks

--- a/tip/599.md
+++ b/tip/599.md
@@ -45,12 +45,15 @@ a bug report, we can ask to type "package require tcl" and it will tell us every
   but from GIT, its "git-&lt;commit-id&gt;". This way we can always locate the exact commit which
   was used as base from the build.
 * All other identifiers are sorted alphabetical.
-* There are 3 predefined tags for the compiler used:
+* There are 3 (optional) predefined tags for the compiler used:
    "clang-xxxx"
    "gcc-xxxx"
    "msvc-xxxx"
   where "xxxx" is the version of the compiler (two digits for major and two digits for minor version)
-* Then there is the following list of identifiers. Other packages than Tcl can use a subset of these:
+* Then there is the following list of (optional) identifiers. Presense of such identifier indicates
+  that this is a non-standard build: the identifier string indicates what manner this
+  build is non-standard. Other packages than Tcl can use a subset of these possible identifiers,
+  but there is no obligation that all packages should implement this.
 
   | Identifier  | Meaning |
   |:-------:|:----------------:|
@@ -58,7 +61,7 @@ a bug report, we can ask to type "package require tcl" and it will tell us every
   | `compilestats`  | Configured with "--enable-symbols=all" |
   | `cplusplus`  | Compiled with a C++ compiler |
   | `debug`  | Configured with "--enable-symbols"|
-  | `ilp32`  | Compiled as 32-bit (integers, longs and pointers are 32-bit) |
+  | `ilp32`  | Compiled as 32-bit (integers, longs and pointers are all 32-bit) |
   | `memdebug`  | Configured with "--enable-symbols=mem" |
   | `nmake`  | Built with "nmake" in stead of "make"|
   | `no-deprecate`  | Deprecated features are removed |
@@ -72,7 +75,7 @@ a bug report, we can ask to type "package require tcl" and it will tell us every
 
   More of those can be added in the future.
 
-* Anyone patching Tcl can add its own identifiers, so it's clear that
+* Anyone patching Tcl can add its own identifier, so it's clear that
   Tcl is modified. E.g.:
 
   | Identifier  | Meaning |
