Cannot use '+' in build identifiers

--- a/tip/599.md
+++ b/tip/599.md
@@ -42,7 +42,7 @@ us everything possible about how we built Tcl (or Tk or ....). Advantage: anyone
 a bug report, we can ask to type "package require tcl" and it will tell us everything needed.
 
 * The first identifier is always the Fossil commit-id. If the package doesn't come from fossil
-  but from GIT, its "git-&lt;commit-id&gt;". This way we can always locate the exact commit which
+  but from GIT, it's "git-&lt;commit-id&gt;". This way we can always locate the exact commit which
   was used as base from the build.
 * All other identifiers are sorted alphabetical.
 * There are 3 (optional) predefined tags for the compiler used:
@@ -68,7 +68,7 @@ a bug report, we can ask to type "package require tcl" and it will tell us every
   | `no-thread`  | Compiled without support for threads |
   | `no-optimize`  | Compiler optimization has been switched off |
   | `objective-c`  | Compiled with an objective-c compiler |
-  | `objective-c++`  | Compiled with an objective-c++ compiler |
+  | `objective-cplusplus`  | Compiled with an objective-c++ compiler |
   | `profiled`  | Compiled with profile information |
   | `static`  | Compiled as static library |
   | `utf-16`  | Internal string format is 'utf-16', not 'unicode' |
