Change signature for TclZipfs_AppHook too. More info about cflags

--- a/tip/599.md
+++ b/tip/599.md
@@ -52,19 +52,20 @@ a bug report, we can ask to type "package require tcl" and it will tell us every
   where "xxxx" is the version of the compiler (two digits for major and two digits for minor version)
 * Then there is the following list of (optional) identifiers. Presense of such identifier indicates
   that this is a non-standard build: the identifier string indicates what manner this
-  build is non-standard. Other packages than Tcl can use a subset of these possible identifiers,
-  but there is no obligation that all packages should implement this.
+  build is non-standard (except for `utf-16`, which is standard in Tcl 8.x but not in Tcl 9.0).
+  Other packages than Tcl can use a subset of these possible identifiers, but there is no obligation
+  that all packages should implement all of them.
 
   | Identifier  | Meaning |
   |:-------:|:----------------:|
-  | `compiledebug` | Configured with "--enable-symbols=all" |
-  | `compilestats`  | Configured with "--enable-symbols=all" |
+  | `compiledebug` | Configured with "--enable-symbols=all", cflag `TCL_COMPILE_DEBUG` |
+  | `compilestats`  | Configured with "--enable-symbols=all", cflag `TCL_COMPILE_STATS` |
   | `cplusplus`  | Compiled with a C++ compiler |
   | `debug`  | Configured with "--enable-symbols"|
   | `ilp32`  | Compiled as 32-bit (integers, longs and pointers are all 32-bit) |
-  | `memdebug`  | Configured with "--enable-symbols=mem" |
+  | `memdebug`  | Configured with "--enable-symbols=mem", cflag `TCL_MEM_DEBUG` |
   | `nmake`  | Built with "nmake" in stead of "make"|
-  | `no-deprecate`  | Deprecated features are removed |
+  | `no-deprecate`  | Deprecated features are removed, cflag `TCL_NO_DEPRECATED` |
   | `no-thread`  | Compiled without support for threads |
   | `no-optimize`  | Compiler optimization has been switched off |
   | `objective-c`  | Compiled with an objective-c compiler |
@@ -96,10 +97,11 @@ a bug report, we can ask to type "package require tcl" and it will tell us every
 
   (just examples, you can invent your own.)
 
-* The functions `Tcl_FindExecutable`, `Tcl_InitSubsystems` and `Tcl_SetPanicProc` are
-  modified to return the version string as described in this TIP. Those functions are
-  meant to be used during Tcl initialisation, which allows to double-check for presense
-  or absence of certain identifiers required by the application (e.g. thread-enabled).
+* The functions `Tcl_FindExecutable`, `Tcl_InitSubsystems`, `Tcl_SetPanicProc` and
+  `TclZipfs_AppHook` are modified to return the version string as described in this
+  TIP. Those functions are meant to be used during Tcl initialisation, which allows
+  to double-check for presense or absence of certain identifiers as needed by the
+  application (e.g. "no-thread" when thread-support is missing).
 
 * Functions like "package require" and "package vcompare" fully ignore these identifiers.
 
