--- a/tip/599.md
+++ b/tip/599.md
@@ -99,8 +99,8 @@ a bug report, we can ask to type "package require tcl" and it will tell us every
 
 * The functions `Tcl_FindExecutable`, `Tcl_InitSubsystems`, `Tcl_SetPanicProc` and
   `TclZipfs_AppHook` are modified to return the version string as described in this
-  TIP. Those functions are meant to be used during Tcl initialisation, which allows
-  to double-check for presense or absence of certain identifiers as needed by the
+  TIP. Those functions are meant to be used during Tcl initialization, which allows
+  to double-check for presence or absence of certain identifiers as needed by the
   application (e.g. "no-thread" when thread-support is missing).
 
 * Functions like "package require" and "package vcompare" fully ignore these identifiers.
@@ -109,9 +109,8 @@ a bug report, we can ask to type "package require tcl" and it will tell us every
   _without_ the additional identifiers. For compatibility reasons the full version
   string is only returned when using "package require tcl"/"package require tk"
 
-* Deprecate the array elements tcl_platform[threaded], tcl_platform[pointerSize],
-  and tcl_platform[wordSize]. In Tcl 9.0 those will be gone. You can instead check
-  for the identifiers `no-thread` resp. `ilp32` now.
+* Deprecate the array elements tcl_platform[threaded] and tcl_platform[debug].
+  In Tcl 9.0 those will be gone.
 
 * Deprecate the following "tcl::pkgconfig" keys: `debug`, `threaded`, `profiled`,
   `64bit`, `optimized`, `mem_debug`, `compile_stats`. In Tcl 9.0 those will be gone.
