"utf16" -> "utf-16". Add "Discussion" section

--- a/tip/599.md
+++ b/tip/599.md
@@ -14,8 +14,18 @@ Example:
 <pre>
 $ tclsh8.7
 % package require tcl
-8.7a4+c59a73a540b8cfa7672fc48ec5acc2b7c9d146fad89c7400238f34886dca31e7.clang-1200.utf16
-</pre>   
+8.7a6+4a8309fafe073cae4fb210cfcd37e6accd8e31e7558aefab3d7f2ad6a27540c2.clang-1200.utf-16
+% lindex [split [package require tcl] +] 0
+8.7a6
+% expr {"utf-16" in [split [package require tcl] .]}
+1
+</pre>
+
+It's a simple extension of the version string, adding a '+' sign and some crucial build
+information, to be used in Fossil bug reports. This way we can determine quickly
+whether a 'static' build was used, whether a specific patched version (e.g. 'fedora',
+which has a slightly different directory layout) was used, just by asking the
+result of "package require tcl".
 
 # Specification
 
@@ -35,11 +45,13 @@ Thus two versions that differ only in the build metadata, have the same preceden
 * "2.0a2+tag1.tag2.tag3"
 
 Note that this is exactly the same way as how ["Semanic Versioning"](https://semver.org/#spec-item-10) versions
-can add optional build metadata, that's not a coincidence.
+can add optional build metadata, that's not a coincidence. There's no need for Tcl to invent
+its own wheel.
 
 However, in Tcl, we want to use this information to build an unique version string which tells
-us everything possible about how we built Tcl (or Tk or ....). Advantage: anyone submitting
-a bug report, we can ask to type "package require tcl" and it will tell us everything needed.
+us crucial information about how Tcl (or Tk or ....) was built. Advantage: anyone submitting
+a bug report, we can ask to type "package require tcl" and it will help being able to reproduce
+the bug.
 
 * The first identifier is always the Fossil commit-id. If the package doesn't come from fossil
   but from GIT, it's "git-&lt;commit-id&gt;". This way we can always locate the exact commit which
@@ -50,7 +62,7 @@ a bug report, we can ask to type "package require tcl" and it will tell us every
    "gcc-xxxx"
    "msvc-xxxx"
   where "xxxx" is the version of the compiler (two digits for major and two digits for minor version)
-* Then there is the following list of (optional) identifiers. Presense of such identifier indicates
+* Then there is the following list of (optional) identifiers. Presence of such identifier indicates
   that this is a non-standard build: the identifier string indicates what manner this
   build is non-standard (except for `utf-16`, which is standard in Tcl 8.x but not in Tcl 9.0).
   Other packages than Tcl can use a subset of these possible identifiers, but there is no obligation
@@ -84,6 +96,7 @@ a bug report, we can ask to type "package require tcl" and it will tell us every
   | `activestate` | "Activestate" patches are applied |
   | `apple`   | "apple" patches are applied |
   | `androwish`| "androwish" patches are applied |
+  | `bawt`    | "BAWT" patches are applied |
   | `bsd`     | "BSD" patches are applied |
   | `cygwin`  | "Cygwin" patches are applied |
   | `debian`  | "Debian" patches are applied |
@@ -95,7 +108,10 @@ a bug report, we can ask to type "package require tcl" and it will tell us every
   | `redhat`  | "Redhat" patches are applied |
   | `ubuntu`  | "Ubuntu" patches are applied |
 
-  (just examples, you can invent your own.)
+  (just examples, you can invent your own). Binary distributions can patch Tcl
+  adding their own identifier, even if it's only for 'branding'. There
+  could be multiple ones (e.g. "ubuntu" could decide to use the "debian"
+  patches as well)
 
 * The functions `Tcl_FindExecutable`, `Tcl_InitSubsystems`, `Tcl_SetPanicProc` and
   `TclZipfs_AppHook` are modified to return the version string as described in this
@@ -114,6 +130,14 @@ a bug report, we can ask to type "package require tcl" and it will tell us every
 
 * Deprecate the following "tcl::pkgconfig" keys: `debug`, `threaded`, `profiled`,
   `64bit`, `optimized`, `mem_debug`, `compile_stats`. In Tcl 9.0 those will be gone.
+
+# Discussion
+
+It has been suggested to put additional keys in tcl::pkgconfig. But tcl::pkgconfig
+does not only contain build information, it also contains installation configuration
+(like "bindir,runtime") information which is not useful in a version string. Also
+it would make the version string unusable in `Tcl_InitSubsystems` and friends,
+before any Tcl interpreter is created.
 
 # Implementation
 
