"profiled" -> "profile". Add more examples.

--- a/tip/599.md
+++ b/tip/599.md
@@ -19,6 +19,15 @@ $ tclsh8.7
 8.7a6
 % expr {"utf-16" in [split [package require tcl] .]}
 1
+
+$ tclsh9.0
+% package require tcl
+9.0a3+f896257cbcef7829503585ca26430bb097c8c33258a3785f7611bbc21c3ba080.gcc-1002
+
+>tclsh87
+% package require tcl
+8.7a6+4a8309fafe073cae4fb210cfcd37e6accd8e31e7558aefab3d7f2ad6a27540c2.magicsplat.msvc-1916.utf-16
+
 </pre>
 
 It's a simple extension of the version string, adding a '+' sign and some crucial build
@@ -26,6 +35,10 @@ information, to be used in Fossil bug reports. This way we can determine quickly
 whether a 'static' build was used, whether a specific patched version (e.g. 'fedora',
 which has a slightly different directory layout) was used, just by asking the
 result of "package require tcl".
+
+Another goal for this TIP is to provide additional information to applications using
+TIP #596: "Stubs support for Embedding Tcl in other applications". Such applications
+can now query Tcl build options even before creating an interpreter.
 
 # Specification
 
@@ -82,7 +95,8 @@ the bug.
   | `no-optimize`  | Compiler optimization has been switched off |
   | `objective-c`  | Compiled with an objective-c compiler |
   | `objective-cplusplus`  | Compiled with an objective-c++ compiler |
-  | `profiled`  | Compiled with profile information |
+  | `purify`  | Compiled with purify information |
+  | `profile`  | Compiled with profile information |
   | `static`  | Compiled as static library |
   | `utf-16`  | Internal string format is 'utf-16', not 'unicode' |
 
@@ -117,7 +131,7 @@ the bug.
   `TclZipfs_AppHook` are modified to return the version string as described in this
   TIP. Those functions are meant to be used during Tcl initialization, which allows
   to double-check for presence or absence of certain identifiers as needed by the
-  application (e.g. "no-thread" when thread-support is missing).
+  application (e.g. signaling "no-thread" when thread-support is missing).
 
 * Functions like "package require" and "package vcompare" fully ignore these identifiers.
 
@@ -135,9 +149,9 @@ the bug.
 
 It has been suggested to put additional keys in tcl::pkgconfig. But tcl::pkgconfig
 does not only contain build information, it also contains installation configuration
-(like "bindir,runtime") information which is not useful in a version string. Also
-it would make the version string unusable in `Tcl_InitSubsystems` and friends,
-before any Tcl interpreter is created.
+information (like "bindir,runtime") which is not useful in a version string. Also
+it would prevent the full version string to be usable in `Tcl_InitSubsystems()` and
+friends (TIP #596), before any Tcl interpreter is created.
 
 # Implementation
 
