--- a/tip/604.md
+++ b/tip/604.md
@@ -12,11 +12,11 @@ Most GUI tookits provide an interface to send graphic and text output to a devic
 
 # Design
 
- * Windows: GDI (https://wiki.tcl-lang.org/page/GDI)
+ * Windows: GDI [https://wiki.tcl-lang.org/page/GDI](https://wiki.tcl-lang.org/page/GDI)
 
  * X11: New development
 
- * Mac: Cocoaprint (https://wiki.tcl-lang.org/page/cocoaprint)
+ * Mac: Cocoaprint [https://wiki.tcl-lang.org/page/cocoaprint](https://wiki.tcl-lang.org/page/cocoaprint)
 
 Existing code from the GDI and cocoaprint extension packages has been refactored and ported into Tk's core; the authors have granted permission to incorporate their code under Tk's BSD-style license. The X11 development will be a Tk dialog that will drive the "lpr" or "lp" commands.
 
