Add detail on demo to TIP 604

--- a/tip/604.md
+++ b/tip/604.md
@@ -31,6 +31,10 @@ This command specifies that the canvas will be printed, and the window holding t
 
 This command specifies that the text widget will be printed, and the window holding the text data.
 
+# Example
+
+A full demonstration of these commands in action has been added to the Tk widget demo under the "Common Dialogs" section, "Printing from canvas and text widgets." Since the API is very simple, one can get a better understanding of the functionality by actually testing it in the demo.
+
 
 # Implementation 
 
