Corrections to 604 metadata

--- a/tip/604.md
+++ b/tip/604.md
@@ -1,9 +1,11 @@
 # TIP 604: Printing Support for Text and Canvas Widgets
-	Author:		Kevin Walzer <kw@codebykevin.com>
-	State:		Draft
-	Type:		Project
-	Created:	03-July-2021	
-	Keywords:	Tk, desktop integration
+	Author:         Kevin Walzer <kw@codebykevin.com>
+	State:          Draft
+	Type:           Project
+	Created:        03-July-2021
+	Keywords:       Tk, desktop integration
+	Tcl-Version:    8.7
+	Tk-Branch:      tk_print
 -----
 
 # Abstract
