--- a/tip/604.md
+++ b/tip/604.md
@@ -25,13 +25,10 @@ Existing code from the GDI and cocoaprint extension packages has been refactored
 The tk print commands will present a script-level public API implementing the proposed interface, outlined below.
 
 
- > **tk print** _canvas_ _window_ 
+ > **tk print** _window_ 
 
-This command specifies that the canvas will be printed, and the window holding the canvas data.
+This command prints the contents of a canvas or text widget.
 
-> **tk print** _text_ _window_ 
-
-This command specifies that the text widget will be printed, and the window holding the text data.
 
 # Example
 
